# space_collision_py_ts

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile
backend/: pyproject.toml
backend/src/: api.py  bdd_helper.py  discoweb_client.py  postgres.py
backend/tests/: api_e2e_test.py  api_it_test.py  api_test.py  conftest.py  discoweb_client_e2e_test.py  postgres_e2e_test.py
frontend/: entrypoint.sh  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: config.js
frontend/src/: App.test.tsx  App.tsx  setupTests.ts  vite-env.d.ts
frontend/test/: App.test.tsx
migrations/postgres/: V1__create_payloads.sql  V1__create_schema.sql  V2__create_launchs.sql  V3__create_reentries.sql
scripts/: docker-build.sh
